log
Sun May 15 06:14:48 HSP 2022: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:64:31: error: statement with no effect [-Werror=unused-value]
             adj_n->sudo[i][j] == num;
             ~~~~~~~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ca2d96e
Sun May 15 06:15:09 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8c72f84
Sun May 15 07:31:21 HSP 2022: 
 sudoku.c | 56 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 56 insertions(+)
 tests:  2|4
total_score: 15/70
fbc4d50
Sun May 15 07:33:29 HSP 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
07de3a3
Sun May 15 07:37:25 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
6e94cb9
Sun May 15 07:37:47 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
2c3fe4d
Sun May 15 07:42:30 HSP 2022: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
9db30b1
Sun May 15 07:56:30 HSP 2022: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  10|0
total_score: 70/70
7e20518
Sun May 15 08:02:03 HSP 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|0
total_score: 70/70
9b6c5ed
